# test

./: 53.txt  Default_VPC_Deletion_Analysis_and_Solution.markdown  acp_poc.docx  check_no_policy_document.py  confluence_to_chromadb_titan_pdf_sync_rootid.py  confluence_to_chromadb_titan_sync_only_username_resilient.py  demo-content  find_lambdas  langgraph_class2.ipynb  reinvent.txt  requirements.txt  test.ipynb  test.py
multi_agent_a2a_project/: .env.example  .gitignore  AGENT_TECH_STACK.md  MCP_SCRIPTS_GUIDE.md  PROJECT_ORGANIZATION.md  SETUP_COMPLETE.md  STREAMLIT_README.md  UV_README.md  demo.sh  pyproject.toml  run_mortgage_flow.py
multi_agent_a2a_project/frontend/: README.md  mortgage_analyzer_app.py
multi_agent_a2a_project/scripts/: manage.sh  monitor_logs.sh  restart_mcp_server.sh  restart_streamlit.sh  setup_uv.sh  start_all_agents.sh  start_mcp_server.sh  start_streamlit_app.sh  stop_all_agents.sh  stop_mcp_server.sh  stop_streamlit.sh
multi_agent_a2a_project/src/agents/compliance_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
multi_agent_a2a_project/src/agents/credit_risk_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
multi_agent_a2a_project/src/agents/document_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
multi_agent_a2a_project/src/agents/routing_agent/: __init__.py  __main__.py  agent.py  agent_executor.py
multi_agent_a2a_project/utilities/a2a/: agent_connect.py  agent_discovery.py  agent_registry.json
multi_agent_a2a_project/utilities/mcp/: MCP_INTEGRATION_GUIDE.md  MCP_REORGANIZATION_SUMMARY.md  README.md  __init__.py  mcp_config.json  mcp_discovery.py  mcp_manager.py
multi_agent_a2a_project/utilities/mcp/clients/: __init__.py  mcp_client.py
multi_agent_a2a_project/utilities/mcp/servers/: __init__.py  credit_mcp_server.py
multi_agent_a2a_project/utilities/mcp/tools/: __init__.py  mcp_credit_tools.py
